<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android2="http://schemas.android.com/apk/res-auto">
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_commandes"
        android:title="@string/text_commandes"
        android2:showAsAction="always"/>

    <item android:id="@+id/action_produits"
        android:title="@string/text_produits"
        android:visible="false"
        android2:showAsAction="always"/>

    <item android:id="@+id/action_settings"
        android:visible="true"
        android2:showAsAction="never"
        android:title="@string/settings" />

    <item android:id="@+id/action_logout"
        android:visible="true"
        android2:showAsAction="never"
        android:title="@string/logout" />

</menu>