<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.ddesign.foyer.SettingsActivity">

    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/settings_title_reglage"
                android:layout_marginBottom="@dimen/settings_margin_medium"/>

            <Switch
                android:id="@+id/switch_autolog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/settings_autolog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/settings_autolog_detail"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/settings_startup"
                android:id="@+id/switch_startup"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/settings_startup_detail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginBottom="@dimen/settings_margin_medium"
                android:layout_marginTop="@dimen/settings_margin_large"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/settings_title_data" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/settings_button_cache"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/button_cach" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_gravity="center_vertical"
                    android:text="@string/settings_button_data"
                    android:id="@+id/button_data" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginBottom="@dimen/settings_margin_medium"
                android:layout_marginTop="@dimen/settings_margin_large"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/settings_title_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:text="@string/settings_dev_app_title" />

            <TextView
                android:id="@+id/alexandre_nicolas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginBottom="@dimen/settings_margin_medium"
                android:text="@string/settings_dev_app_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:text="@string/settings_dev_web_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/settings_dev_web_text" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
