<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <ScrollView
        android:id="@+id/cardListView"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card"
                android:padding="@dimen/card_padding"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_item_detail"
                    android:textColor="@android:color/black"
                    style="?android:attr/textAppearanceMedium"
                    />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/item_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/textAppearanceMedium"
                        android:text="@string/text_item_price"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <ImageButton
                        android:layout_width="@dimen/image_button_size"
                        android:layout_height="@dimen/image_button_size"
                        android:src="@drawable/tooltip_image"
                        android:layout_alignParentRight="true"
                        android:padding="0dp"
                        android:id="@+id/imageButton"
                        />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_padding"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/text_item_not_available"
                    android:id="@+id/item_not_available"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>




</LinearLayout>


